[tool.poetry]
name = "bomapi"
version = "0.1.0"
description = "Python interface to the Australia Government BOM Weather API"
authors = ["Tim Savage <tim@savage.company>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
